--- a/scss/parts/_typography.scss
+++ b/scss/parts/_typography.scss
@@ -176,7 +176,7 @@ pre {
     background-color: $soft-gray;
     line-height: $line-height-normal;
     overflow: auto;
-    white-space: pre-wrap;
+    white-space: pre;
     code, kbd {
         font-size: inherit;
         background-color: transparent;
